# article-inf-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
