[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["vitayushchyk <vitay2715@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
fastapi = { extras = ["standard"], version = "^0.114.1" }
uvicorn = "^0.30.6"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"

